Fix weaving for redraw (include resources directory in binary build)
Signed-off-by: Bartlomiej Laczkowski <bartek@genuitec.com>

--- a/org.eclipse.jdt.codemining/build.properties
+++ b/org.eclipse.jdt.codemining/build.properties
@@ -2,4 +2,5 @@ source.. = src/
 bin.includes = META-INF/,\
                .,\
                plugin.properties,\
-               plugin.xml
+               plugin.xml,\
+               resources/
